--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Portfolio</a></li>
-							<li><a href="generic.html">Resume</a></li>
+							<li><a href="assets/Jigar_RA.pdf" target="_blank">Resume</a></li>
 							<li><a href="elements.html">Contact</a></li>
 						</ul>
 						<ul class="icons">
