--- a/index.html
+++ b/index.html
@@ -87,7 +87,18 @@
 										<li><a href="https://public.tableau.com/app/profile/jigar.patel2389/viz/AirbnbListing_17062834928180/Dashboard1" class="button">View Project</a></li>
 									</ul>
 								</article>
-								
+								<article>
+    <header>
+        <h2><a href="#">Email Marketing<br />
+        </a></h2>
+    </header>
+    <a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/Email%20Marketing%20KPI.xlsx" class="image fit"><img src="images/Email.png" alt="Email Marketing KPIs" /></a>
+    <p>In this project, I have presented my Email marketing KPIs of over 200 campaigns.</p>
+    <ul class="actions special">
+        <li><a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/Email%20Marketing%20KPI.xlsx" class="button">View Project</a></li>
+    </ul>
+</article>
+
 					
 						<!-- Footer -->
 							<footer>
