--- a/index.html
+++ b/index.html
@@ -55,18 +55,29 @@
                         <!-- Featured Post -->
                             <article class="post featured">
                                 <header class="major">
-                                    <h2><a href="#">Data Cleaning <br />
-                                        Using SQL </a></h2>
-                                    <p>In the Nashville Housing Data project, I expertly used SQL to cleanse and standardize a complex dataset, ensuring accuracy and reliability for advanced real estate market analysis. Tools used: SQL, Excel.<br/></p>
+                                    <h2><a href="#">Email Marketing<br />
+                                        </a></h2>
+                                    <p>In this project, I analyzed and visualized KPIs from over 200 email marketing campaigns to identify trends and optimize performance. Tools used: Excel, Power BI.</p>
                                 </header>
-                                <a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/NashvilleHousing.sql" class="image main" target="_blank"><img src="images/Real Estate.jpg" alt="Nashville Housing Data Project" /></a>
+                                <a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/Email%20Marketing%20KPI.xlsx" class="image main" target="_blank"><img src="images/Email.png" alt="Email Marketing KPIs" /></a>
                                 <ul class="actions special">
-                                    <li><a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/NashvilleHousing.sql" class="button large" target="_blank">View Project</a></li>
+                                    <li><a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/Email%20Marketing%20KPI.xlsx" class="button large" target="_blank">View Project</a></li>
                                 </ul>
                             </article>
 
                         <!-- Posts -->
                             <section class="posts">
+                                <article>
+                                    <header>
+                                        <h2><a href="#">Data Cleaning <br />
+                                            Using SQL </a></h2>
+                                    </header>
+                                    <a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/NashvilleHousing.sql" class="image fit" target="_blank"><img src="images/Real Estate.jpg" alt="Nashville Housing Data Project" /></a>
+                                    <p>In the Nashville Housing Data project, I expertly used SQL to cleanse and standardize a complex dataset, ensuring accuracy and reliability for advanced real estate market analysis. Tools used: SQL, Excel.</p>
+                                    <ul class="actions special">
+                                        <li><a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/NashvilleHousing.sql" class="button" target="_blank">View Project</a></li>
+                                    </ul>
+                                </article>
                                 <article>
                                     <header>
                                         <h2><a href="#">Covid 19 Data Exploration<br />
@@ -80,17 +91,6 @@
                                 </article>
                                 <article>
                                     <header>
-                                        <h2><a href="#">Email Marketing<br />
-                                        </a></h2>
-                                    </header>
-                                    <a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/Email%20Marketing%20KPI.xlsx" class="image fit" target="_blank"><img src="images/Email.png" alt="Email Marketing KPIs" /></a>
-                                    <p>In this project, I analyzed and visualized KPIs from over 200 email marketing campaigns to identify trends and optimize performance. Tools used: Excel, Power BI.</p>
-                                    <ul class="actions special">
-                                        <li><a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/Email%20Marketing%20KPI.xlsx" class="button" target="_blank">View Project</a></li>
-                                    </ul>
-                                </article>
-                                <article>
-                                    <header>
                                         <h2><a href="#">TABLEAU DASHBOARDS<br />
                                         </a></h2>
                                     </header>
@@ -100,7 +100,7 @@
                                         <li><a href="https://public.tableau.com/app/profile/jigar.patel2389/viz/AirbnbListing_17062834928180/Dashboard1" class="button" target="_blank">View Project</a></li>
                                     </ul>
                                 </article>
-                         </section>
+                            </section>
 
                         <!-- Footer -->
                             <footer>
