--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                                         </a></h2>
                                     <p>In this project, I analyzed and visualized KPIs from over 200 email marketing campaigns to identify trends and optimize performance. Tools used: Excel, Power BI.</p>
                                 </header>
-                                <a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/Email%20Marketing%20KPI.xlsx" class="image main" target="_blank"><img src="images/Email.png" alt="Email Marketing KPIs" /></a>
+                                <a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/Email%20Marketing%20KPI.xlsx" class="image main" target="_blank">
+                                    <img src="images/Email.png" alt="Email Marketing KPIs" style="width: 70%; height: auto;" />
+                                </a>
                                 <ul class="actions special">
                                     <li><a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/Email%20Marketing%20KPI.xlsx" class="button large" target="_blank">View Project</a></li>
                                 </ul>
