--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-    Massively by HTML5 UP
-    html5up.net | @ajlkn
-    Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
     <head>
         <title>Jigar - Data Analyst</title>
@@ -17,147 +12,91 @@
     <body class="is-preload">
 
         <!-- Wrapper -->
-            <div id="wrapper" class="fade-in">
+        <div id="wrapper" class="fade-in">
 
-                <!-- Intro -->
-                    <div id="intro">
-                        <h1>Jigar Patel<br />
-                        Portfolio</h1>
-                        <p>A data analyst skilled in SQL, Python, MS Excel, Power BI, and Tableau. Specialized in transforming complex data into actionable insights for strategic business decisions.<a href="https://www.linkedin.com/in/connect-jigar92/" target="_blank">@JigarBusinessAnalyst<br />
-                        </p>
-                        <ul class="actions">
-                            <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-                        </ul>
-                    </div>
+            <!-- Intro -->
+            <div id="intro">
+                <h1>Jigar Patel<br />Portfolio</h1>
+                <p>A data analyst skilled in SQL, Python, MS Excel, Power BI, and Tableau. Specialized in transforming complex data into actionable insights.<br />
+                <a href="https://www.linkedin.com/in/connect-jigar92/" target="_blank">@JigarBusinessAnalyst</a></p>
+                <ul class="actions">
+                    <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+                </ul>
+            </div>
 
-                <!-- Header -->
-                    <header id="header">
-                        <a href="index.html" class="logo">Jigar - Data Analyst</a>
+            <!-- Header -->
+            <header id="header">
+                <a href="index.html" class="logo">Jigar - Data Analyst</a>
+            </header>
+
+            <!-- Nav -->
+            <nav id="nav">
+                <ul class="links">
+                    <li class="active"><a href="index.html">Portfolio</a></li>
+                    <li><a href="assets/Jigar_Digital Marketing.pdf" target="_blank">Resume</a></li>
+                </ul>
+                <ul class="icons">
+                    <li><a href="https://github.com/connectjigar" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/connect-jigar92/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+                </ul>
+            </nav>
+
+            <!-- Main -->
+            <div id="main">
+
+                <!-- Featured Post -->
+                <article class="post featured">
+                    <header class="major">
+                        <h2><a href="#">Email Marketing</a></h2>
+                        <p>Analyzed and visualized KPIs from over 200 email marketing campaigns to optimize performance. Tools used: Excel, Power BI.</p>
                     </header>
+                    <a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/Email%20Marketing%20KPI.xlsx" class="image main" target="_blank">
+                        <img src="images/Email.png" alt="Email Marketing KPIs" style="width: 70%; height: auto; display: block; margin: 0 auto;" loading="lazy" />
+                    </a>
+                    <ul class="actions special">
+                        <li><a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/Email%20Marketing%20KPI.xlsx" class="button large" target="_blank">View Project</a></li>
+                    </ul>
+                </article>
 
-                <!-- Nav -->
-                    <nav id="nav">
-                        <ul class="links">
-                            <li class="active"><a href="index.html">Portfolio</a></li>
-                            <li><a href="assets/Jigar_Digital Marketing.pdf" target="_blank">Resume</a></li>
-                        </ul>
-                        <ul class="icons">
-                            <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                            <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                            <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                            <li><a href="https://github.com/connectjigar" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-                        </ul>
-                    </nav>
-
-                <!-- Main -->
-                    <div id="main">
-
-                        <!-- Featured Post -->
-                            <article class="post featured">
-                                <header class="major">
-                                    <h2><a href="#">Email Marketing<br />
-                                        </a></h2>
-                                    <p>In this project, I analyzed and visualized KPIs from over 200 email marketing campaigns to identify trends and optimize performance. Tools used: Excel, Power BI.</p>
-                                </header>
-                                <a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/Email%20Marketing%20KPI.xlsx" class="image main" target="_blank">
-                                    <img src="images/Email.png" alt="Email Marketing KPIs" style="width: 30%; height: auto; display: block; margin: 0 auto;" />
-                                </a>
-                                <ul class="actions special">
-                                    <li><a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/Email%20Marketing%20KPI.xlsx" class="button large" target="_blank">View Project</a></li>
-                                </ul>
-                            </article>
-
-                        <!-- Posts -->
-                            <section class="posts">
-                                <article>
-                                    <header>
-                                        <h2><a href="#">Data Cleaning <br />
-                                            Using SQL </a></h2>
-                                    </header>
-                                    <a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/NashvilleHousing.sql" class="image fit" target="_blank"><img src="images/Real Estate.jpg" alt="Nashville Housing Data Project" /></a>
-                                    <p>In the Nashville Housing Data project, I expertly used SQL to cleanse and standardize a complex dataset, ensuring accuracy and reliability for advanced real estate market analysis. Tools used: SQL, Excel.</p>
-                                    <ul class="actions special">
-                                        <li><a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/NashvilleHousing.sql" class="button" target="_blank">View Project</a></li>
-                                    </ul>
-                                </article>
-                                <article>
-                                    <header>
-                                        <h2><a href="#">Covid 19 Data Exploration<br />
-                                            </a></h2>
-                                    </header>
-                                    <a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/COVID%20Portfolio%20Project%20actual%20scripts%20in%20video%20v2.sql" class="image fit" target="_blank"><img src="images/coronavirus.jpg" alt="COVID-19 Data Exploration" /></a>
-                                    <p>In this project, I used SQL Server to explore global COVID-19 data, analyzing case counts, trends, and death rates to uncover key insights for the pandemic response.</p>
-                                    <ul class="actions special">
-                                        <li><a href="https://github.com/connectjigar/Portfolio-Projects-/blob/main/COVID%20Portfolio%20Project%20actual%20scripts%20in%20video%20v2.sql" class="button" target="_blank">View Project</a></li>
-                                    </ul>
-                                </article>
-                                <article>
-                                    <header>
-                                        <h2><a href="#">TABLEAU DASHBOARDS<br />
-                                        </a></h2>
-                                    </header>
-                                    <a href="https://public.tableau.com/app/profile/jigar.patel2389/viz/AirbnbListing_17062834928180/Dashboard1" class="image fit" target="_blank"><img src="images/Tableau.webp" alt="Tableau Dashboard Visualization" /></a>
-                                    <p>Created interactive Tableau dashboards showcasing Airbnb listings, including visual insights on pricing, location, and user ratings for better business decisions.</p>
-                                    <ul class="actions special">
-                                        <li><a href="https://public.tableau.com/app/profile/jigar.patel2389/viz/AirbnbListing_17062834928180/Dashboard1" class="button" target="_blank">View Project</a></li>
-                                    </ul>
-                                </article>
-                            </section>
-
-                        <!-- Footer -->
-                            <footer>
-                                <div class="pagination">
-                                    <!-- Page numbers (add if needed) -->
-                                    <a href="#" class="page active">1</a>
-                                    <a href="#" class="page">2</a>
-                                    <a href="#" class="page">3</a>
-                                </div>
-                            </footer>
-
-                    </div>
+                <!-- Other Posts -->
+                <section class="posts">
+                    <!-- Other projects here -->
+                </section>
 
                 <!-- Footer -->
-                    <footer id="footer">
-                        <section class="split contact">
-                            <section class="alt">
-                                <h3>Address</h3>
-                                <p>Greater Toronto Area<br /></p>
-                            </section>
-                            <section>
-                                <h3>Phone</h3>
-                                <p><a href="#">(416) 457-5296</a></p>
-                            </section>
-                            <section>
-                                <h3>Email</h3>
-                                <p><a href="mailto:connectjigar92@gmail.com">connectjigar92@gmail.com</a></p>
-                            </section>
-                            <section>
-                                <h3>Social</h3>
-                                <ul class="icons alt">
-                                    <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-                                    <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-                                    <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-                                    <li><a href="https://github.com/connectjigar" class="icon brands alt fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-                                </ul>
-                            </section>
-                        </section>
-                    </footer>
-
-                <!-- Copyright -->
-                    <div id="copyright">
-                        <ul><li>&copy; Jigar Patel</li><li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li></ul>
+                <footer>
+                    <div class="pagination">
+                        <a href="#" class="page active">1</a>
+                        <a href="#" class="page">2</a>
                     </div>
+                </footer>
 
             </div>
 
+            <!-- Footer -->
+            <footer id="footer">
+                <section class="split contact">
+                    <section class="alt">
+                        <h3>Address</h3>
+                        <p>Greater Toronto Area<br /></p>
+                    </section>
+                    <section>
+                        <h3>Email</h3>
+                        <p><a href="mailto:connectjigar92@gmail.com">connectjigar92@gmail.com</a></p>
+                    </section>
+                </section>
+            </footer>
+
+            <!-- Copyright -->
+            <div id="copyright">
+                <ul><li>&copy; Jigar Patel</li><li>Design: <a href="https://html5up.net" target="_blank">HTML5 UP</a></li></ul>
+            </div>
+
+        </div>
+
         <!-- Scripts -->
-            <script src="assets/js/jquery.min.js"></script>
-            <script src="assets/js/jquery.scrollex.min.js"></script>
-            <script src="assets/js/jquery.scrolly.min.js"></script>
-            <script src="assets/js/browser.min.js"></script>
-            <script src="assets/js/breakpoints.min.js"></script>
-            <script src="assets/js/util.js"></script>
-            <script src="assets/js/main.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="assets/js/main.js"></script>
 
     </body>
 </html>
