--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
     <head>
-        <title>Jigar - Data Analyst</title>
+        <title>Jigar - Digital Marketing Specialist</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <meta name="description" content="Jigar Patel's portfolio showcasing projects in data analysis using SQL, Python, Excel, Power BI, and Tableau." />
