--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div id="intro">
                         <h1>Jigar Patel<br />
                         Portfolio</h1>
-                        <p>A dynamic Digital Marketing Specialist with over 6 years of expertise in SEO, email marketing, Google Ads, social media campaigns, and data analytics, utilizing tools like Klaviyo, SEMrush, Google Analytics, and Tableau to drive business growth and deliver results.<a href="https://www.linkedin.com/in/connect-jigar92/" target="_blank">@JigarBusinessAnalyst<br />
+                        <p>A dynamic Digital Marketing Specialist with over 6 years of expertise in SEO, email marketing, Google Ads, social media campaigns, and data analytics, utilizing tools like Klaviyo, SEMrush, Google Analytics, and Tableau to drive business growth and deliver results.<a href="https://www.linkedin.com/in/connect-jigar92/" target="_blank">@JigarDigitalMarkeingSpecialist<br />
                         </p>
                         <ul class="actions">
                             <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
