--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <!-- Header -->
                     <header id="header">
-                        <a href="index.html" class="logo">Jigar - Data Analyst</a>
+                        <a href="index.html" class="logo">Jigar - Digital Marketing Strategist</a>
                     </header>
 
                 <!-- Nav -->
