--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <nav id="nav">
                         <ul class="links">
                             <li class="active"><a href="index.html">Portfolio</a></li>
-                            <li><a href="assets/Jigar_Digital Marketing.pdf" target="_blank">Resume</a></li>
+                            <li><a href="assets/Jigar_DigitalMarketing.pdf" target="_blank">Resume</a></li>
                         </ul>
                         <ul class="icons">
                             <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
